greatly enhanced the functionality of the generate_emu_config script + build script + updated .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,15 @@ base.lib
 steamclient.exp
 steamclient.lib
 out/*
+
+scripts/.py/
+scripts/.venv/
+scripts/.env/
+scripts/.vscode/
+scripts/backup/
+scripts/bin/
+scripts/build_tmp/
+scripts/login_temp/
+scripts/**/__pycache__/
+scripts/generate_emu_config.spec
+scripts/my_login.txt
