+ fix workspace variable usage in all workflow scripts
+ chmod 777 linux build script before running it & use sudo

--- a/.github/workflows/build-gen_emu_config.yml
+++ b/.github/workflows/build-gen_emu_config.yml
@@ -19,22 +19,22 @@ jobs:
     runs-on: windows-2022
 
     steps:
-    - name: Checkout branch
-      uses: actions/checkout@v4
-    
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
 
+    - name: Checkout branch
+      uses: actions/checkout@v4
+    
     - name: Install dependencies
       shell: cmd
-      working-directory: ${{env.GITHUB_WORKSPACE}}/scripts
+      working-directory: ${{ github.workspace }}/scripts
       run: recreate_venv.bat
 
     - name: Rebuild
       shell: cmd
-      working-directory: ${{env.GITHUB_WORKSPACE}}/scripts
+      working-directory: ${{ github.workspace }}/scripts
       run: rebuild.bat
 
     - name: Upload build
