keep all workflow artifacts for 1 day only

--- a/.github/workflows/build-gen_emu_config-win.yml
+++ b/.github/workflows/build-gen_emu_config-win.yml
@@ -39,4 +39,5 @@ jobs:
         path: 'scripts/bin/win/'
         if-no-files-found: 'error'
         compression-level: 9
+        retention-days: 1
     
