--- a/.github/workflows/build-gen_emu_config-linux.yml
+++ b/.github/workflows/build-gen_emu_config-linux.yml
@@ -34,4 +34,5 @@ jobs:
         path: 'scripts/bin/linux/'
         if-no-files-found: 'error'
         compression-level: 9
+        retention-days: 1
     
