--- a/.github/workflows/build-win.yml
+++ b/.github/workflows/build-win.yml
@@ -2,9 +2,12 @@ name: Windows-build
 
 on:
   push:
-    branches: [ "ci_runner" ]
-  # pull_request:
-  #   branches: [ "ci_runner" ]
+    branches: [ 
+      "ci-build-emu-win",
+      "ci-build-all"
+    ]
+  pull_request:
+    branches: [ "dev" ]
 
 permissions:
   contents: read
