--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -2,9 +2,12 @@ name: Linux-build
 
 on:
   push:
-    branches: [ "ci_runner" ]
-  # pull_request:
-  #   branches: [ "ci_runner" ]
+    branches: [ 
+      "ci-build-emu-linux",
+      "ci-build-all"
+    ]
+  pull_request:
+    branches: [ "dev" ]
 
 permissions:
   contents: read
