--- a/.github/workflows/build-gen_emu_config-linux.yml
+++ b/.github/workflows/build-gen_emu_config-linux.yml
@@ -3,14 +3,23 @@ name: Generate emu config script (Linux)
 on:
   push:
     branches: [ 
-      "ci-build-gen-linux",
+      "ci-build-gen-linux*",
       "ci-build-all"
     ]
+    tags:        
+      - release*
   pull_request:
     branches: [ "dev" ]
+  workflow_dispatch:
+    # nothing
 
 permissions:
-  contents: read
+  contents: write
+
+env:
+  ARTIFACT_NAME: "generate_emu_config-linux-${{ github.sha }}"
+  ARTIFACT_ROOT_PATH: "scripts/bin/linux"
+  PACKAGE_ROOT_PATH: "scripts/bin/package"
 
 jobs:
   build:
@@ -30,12 +39,23 @@ jobs:
       working-directory: ${{ github.workspace }}/scripts
       run: sudo chmod 77 rebuild_linux.sh && sudo ./rebuild_linux.sh
 
-    - name: Upload build
+    - name: Package build
+      shell: bash
+      working-directory: ${{ github.workspace }}/scripts
+      run: sudo chmod 77 package_linux.sh && sudo ./package_linux.sh
+
+    - name: Upload build package
       uses: actions/upload-artifact@v4
       with:
-        name: "generate_emu_config-linux-${{ github.sha }}"
-        path: 'scripts/bin/linux/'
+        name: "${{ env.ARTIFACT_NAME }}"
+        path: "${{ env.PACKAGE_ROOT_PATH }}/linux/"
         if-no-files-found: 'error'
         compression-level: 9
         retention-days: 1
+
+    - name: Release
+      if: startsWith(github.ref, 'refs/tags/')
+      uses: softprops/action-gh-release@v1
+      with:
+        files: "${{ env.PACKAGE_ROOT_PATH }}/**/*"
     
