--- a/.github/workflows/build-win.yml
+++ b/.github/workflows/build-win.yml
@@ -3,14 +3,18 @@ name: Emu build (Windows)
 on:
   push:
     branches: [ 
-      "ci-build-emu-win",
+      "ci-build-emu-win*",
       "ci-build-all"
     ]
+    tags:        
+      - release*
   pull_request:
     branches: [ "dev" ]
+  workflow_dispatch:
+    # nothing
 
 permissions:
-  contents: read
+  contents: write
 
 env:
   # Expected format {owner}/{repo}.
@@ -18,6 +22,8 @@ env:
   THIRD_PARTY_BASE_DIR: 'third-party'
   DEPS_CACHE_KEY: emu-deps-win
   DEPS_CACHE_DIR: build-win-deps
+  
+  PACKAGE_ROOT_PATH: "build-win/package"
 
 jobs:
   dependencies:
@@ -96,6 +102,13 @@ jobs:
         path: "${{env.THIRD_PARTY_BASE_DIR}}/common/win"
         lfs: true
 
+    - name: Clone third-party deps (deps/win)
+      uses: actions/checkout@v4
+      with:
+        repository: "${{env.DEPS_REPO}}"
+        ref: 'third-party/deps/win'
+        path: "${{env.THIRD_PARTY_BASE_DIR}}/deps/win"
+
 ### build + upload release
     - name: Build release mode
       continue-on-error: true
@@ -103,12 +116,18 @@ jobs:
       working-directory: ${{ github.workspace }}
       run: build_win.bat release
 
-    - name: Upload build (release)
+    - name: Package build (release)
+      if: success()
+      shell: cmd
+      working-directory: ${{ github.workspace }}
+      run: package_win.bat release
+
+    - name: Upload build pacakge (release)
       if: success()
       uses: actions/upload-artifact@v4
       with:
         name: "build-win-release-${{ github.sha }}"
-        path: 'build-win/release/'
+        path: "${{ env.PACKAGE_ROOT_PATH }}/release/"
         if-no-files-found: 'error'
         compression-level: 9
         retention-days: 1
@@ -120,13 +139,25 @@ jobs:
       working-directory: ${{ github.workspace }}
       run: build_win.bat debug
 
-    - name: Upload build (debug)
+    - name: Package build (debug)
+      if: success()
+      shell: cmd
+      working-directory: ${{ github.workspace }}
+      run: package_win.bat debug
+
+    - name: Upload build pacakge (debug)
       if: success()
       uses: actions/upload-artifact@v4
       with:
         name: "build-win-debug-${{ github.sha }}"
-        path: 'build-win/debug/'
+        path: "${{ env.PACKAGE_ROOT_PATH }}/debug/"
         if-no-files-found: 'error'
         compression-level: 9
         retention-days: 1
+    
+    - name: Release
+      if: success() && startsWith(github.ref, 'refs/tags/')
+      uses: softprops/action-gh-release@v1
+      with:
+        files: "${{ env.PACKAGE_ROOT_PATH }}/**/*"
     
