--- a/.github/workflows/build-gen_emu_config-linux.yml
+++ b/.github/workflows/build-gen_emu_config-linux.yml
@@ -11,14 +11,13 @@ on:
   pull_request:
     branches: [ "dev" ]
   workflow_dispatch:
-    # nothing
+    # allows manual trigger
 
 permissions:
   contents: write
 
 env:
   ARTIFACT_NAME: "generate_emu_config-linux-${{ github.sha }}"
-  ARTIFACT_ROOT_PATH: "scripts/bin/linux"
   PACKAGE_ROOT_PATH: "scripts/bin/package"
 
 jobs:
