--- a/.github/workflows/build-gen_emu_config-win.yml
+++ b/.github/workflows/build-gen_emu_config-win.yml
@@ -11,18 +11,15 @@ on:
   pull_request:
     branches: [ "dev" ]
   workflow_dispatch:
-    # nothing
+    # allows manual trigger
 
 permissions:
   contents: write
 
 env:
   ARTIFACT_NAME: "generate_emu_config-win-${{ github.sha }}"
-  ARTIFACT_ROOT_PATH: "scripts/bin/win"
   PACKAGE_ROOT_PATH: "scripts/bin/package"
   
-  # Expected format {owner}/{repo}.
-  DEPS_REPO: 'otavepto/gbe_fork'
   THIRD_PARTY_BASE_DIR: 'third-party'
 
 jobs:
@@ -41,7 +38,6 @@ jobs:
     - name: Clone third-party deps (deps/win)
       uses: actions/checkout@v4
       with:
-        repository: "${{env.DEPS_REPO}}"
         ref: 'third-party/deps/win'
         path: "${{env.THIRD_PARTY_BASE_DIR}}/deps/win"
 
