--- a/.github/workflows/build-win.yml
+++ b/.github/workflows/build-win.yml
@@ -11,14 +11,12 @@ on:
   pull_request:
     branches: [ "dev" ]
   workflow_dispatch:
-    # nothing
+    # allows manual trigger
 
 permissions:
   contents: write
 
 env:
-  # Expected format {owner}/{repo}.
-  DEPS_REPO: 'otavepto/gbe_fork'
   THIRD_PARTY_BASE_DIR: 'third-party'
   DEPS_CACHE_KEY: emu-deps-win
   DEPS_CACHE_DIR: build-win-deps
@@ -47,28 +45,22 @@ jobs:
       if: steps.emu-deps-cache-step.outputs.cache-hit != 'true'
       uses: actions/checkout@v4
       with:
-        repository: "${{env.DEPS_REPO}}"
         ref: 'third-party/deps/win'
         path: "${{env.THIRD_PARTY_BASE_DIR}}/deps/win"
-        lfs: true
 
     - name: Clone third-party deps (deps/common)
       if: steps.emu-deps-cache-step.outputs.cache-hit != 'true'
       uses: actions/checkout@v4
       with:
-        repository: "${{env.DEPS_REPO}}"
         ref: 'third-party/deps/common'
         path: "${{env.THIRD_PARTY_BASE_DIR}}/deps/common"
-        lfs: true
 
     - name: Clone third-party deps (common/win)
       if: steps.emu-deps-cache-step.outputs.cache-hit != 'true'
       uses: actions/checkout@v4
       with:
-        repository: "${{env.DEPS_REPO}}"
         ref: 'third-party/common/win'
         path: "${{env.THIRD_PARTY_BASE_DIR}}/common/win"
-        lfs: true
 
     - name: Build deps
       if: steps.emu-deps-cache-step.outputs.cache-hit != 'true'
@@ -97,15 +89,12 @@ jobs:
     - name: Clone third-party build helpers (common/win)
       uses: actions/checkout@v4
       with:
-        repository: "${{env.DEPS_REPO}}"
         ref: 'third-party/common/win'
         path: "${{env.THIRD_PARTY_BASE_DIR}}/common/win"
-        lfs: true
 
     - name: Clone third-party deps (deps/win)
       uses: actions/checkout@v4
       with:
-        repository: "${{env.DEPS_REPO}}"
         ref: 'third-party/deps/win'
         path: "${{env.THIRD_PARTY_BASE_DIR}}/deps/win"
 
