--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -21,26 +21,31 @@ env:
 
   DEPS_CACHE_KEY: emu-deps-linux
   DEPS_CACHE_DIR: build-linux-deps
-  
+
   PACKAGE_ROOT_PATH: "build-linux/package"
   
 jobs:
-  dependencies:
+  build:
     runs-on: ubuntu-22.04
 
     steps:
+    - name: Checkout branch
+      uses: actions/checkout@v4
+
+### deps
     - name: Lookup cache for deps
       id: emu-deps-cache-step
+      # !tag && !pull_request
+      # also you could use this: github.event_name != 'pull_request'
+      if: |
+        !startsWith(github.ref, 'refs/tags/') &&
+        !startsWith(github.ref, 'refs/pull/')
+        
       uses: actions/cache@v3
       with:
         key: ${{ env.DEPS_CACHE_KEY }}
         path: ${{ env.DEPS_CACHE_DIR }}
         lookup-only: true
-
-    # we need the repo to build the deps since it has the build scripts
-    - name: Checkout branch
-      if: steps.emu-deps-cache-step.outputs.cache-hit != 'true'
-      uses: actions/checkout@v4
 
     - name: Clone third-party deps (deps/linux)
       if: steps.emu-deps-cache-step.outputs.cache-hit != 'true'
@@ -61,47 +66,33 @@ jobs:
       shell: bash
       run: sudo chmod 777 build_linux_deps.sh && sudo ./build_linux_deps.sh
 
-
-  build:
-    needs: [ dependencies ]
-    runs-on: ubuntu-22.04
-
-    steps:
-    - name: Checkout branch
-      uses: actions/checkout@v4
-
-### deps
-    - name: Grab cache for deps
-      id: emu-deps-cache-step
-      uses: actions/cache@v3
-      with:
-        key: ${{ env.DEPS_CACHE_KEY }}
-        path: ${{ env.DEPS_CACHE_DIR }}
-        fail-on-cache-miss: true
-
+## mandatory Linux packages, installed via sudo apt install ...
     - name: Install required packages
       shell: bash
       run: sudo chmod 777 build_linux_deps.sh && sudo ./build_linux_deps.sh -packages_only
 
+## extra helpers/tools, these are not built inside the deps build dir
     - name: Clone third-party build helpers (build/linux)
       uses: actions/checkout@v4
       with:
         ref: 'third-party/build/linux'
         path: "${{env.THIRD_PARTY_BASE_DIR}}/build/linux"
 
-### build + upload release
+### build (release mode)
     - name: Build release mode
       continue-on-error: true
       shell: bash
       working-directory: ${{ github.workspace }}
       run:  "sudo chmod 777 build_linux.sh && ./build_linux.sh release"
 
+### package (release mode)
     - name: Package build (release)
       if: success()
       shell: bash
       working-directory: ${{ github.workspace }}
       run: sudo chmod 77 package_linux.sh && sudo ./package_linux.sh release
 
+### upload artifact/package to github Actions (release mode)
     - name: Upload build pacakge (release)
       if: success()
       uses: actions/upload-artifact@v4
@@ -112,19 +103,21 @@ jobs:
         compression-level: 9
         retention-days: 1
     
-### build + upload debug
+### build (debug mode)
     - name: Build debug mode
       continue-on-error: true
       shell: bash
       working-directory: ${{ github.workspace }}
       run:  "sudo chmod 777 build_linux.sh && ./build_linux.sh debug"
 
+### package (debug mode)
     - name: Package build (debug)
       if: success()
       shell: bash
       working-directory: ${{ github.workspace }}
       run: sudo chmod 77 package_linux.sh && sudo ./package_linux.sh debug
 
+### upload artifact/package to github Actions (debug mode)
     - name: Upload build pacakge (debug)
       if: success()
       uses: actions/upload-artifact@v4
@@ -135,6 +128,7 @@ jobs:
         compression-level: 9
         retention-days: 1
     
+### release (debug + release modes) if this is a tag push
     - name: Release
       if: success() && startsWith(github.ref, 'refs/tags/')
       uses: softprops/action-gh-release@v1
