--- a/.github/workflows/build-gen_emu_config-win.yml
+++ b/.github/workflows/build-gen_emu_config-win.yml
@@ -18,7 +18,7 @@ permissions:
 
 env:
   ARTIFACT_NAME: "generate_emu_config-win-${{ github.sha }}"
-  PACKAGE_ROOT_PATH: "scripts/bin/package"
+  PACKAGE_ROOT_PATH: "script_generate_emu_config/bin/package"
   
   THIRD_PARTY_BASE_DIR: 'third-party'
 
@@ -43,17 +43,17 @@ jobs:
 
     - name: Install dependencies
       shell: cmd
-      working-directory: ${{ github.workspace }}/scripts
+      working-directory: ${{ github.workspace }}/script_generate_emu_config
       run: recreate_venv_win.bat
 
     - name: Rebuild
       shell: cmd
-      working-directory: ${{ github.workspace }}/scripts
+      working-directory: ${{ github.workspace }}/script_generate_emu_config
       run: rebuild_win.bat
 
     - name: Package build
       shell: cmd
-      working-directory: ${{ github.workspace }}/scripts
+      working-directory: ${{ github.workspace }}/script_generate_emu_config
       run: package_win.bat
 
     - name: Upload build package
