--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -80,21 +80,18 @@ jobs:
 
 ### build (release mode)
     - name: Build release mode
-      continue-on-error: true
       shell: bash
       working-directory: ${{ github.workspace }}
       run:  "sudo chmod 777 build_linux.sh && ./build_linux.sh release"
 
 ### package (release mode)
     - name: Package build (release)
-      if: success()
       shell: bash
       working-directory: ${{ github.workspace }}
       run: sudo chmod 77 package_linux.sh && sudo ./package_linux.sh release
 
 ### upload artifact/package to github Actions (release mode)
     - name: Upload build pacakge (release)
-      if: success()
       uses: actions/upload-artifact@v4
       with:
         name: "build-linux-release-${{ github.sha }}"
@@ -105,21 +102,18 @@ jobs:
     
 ### build (debug mode)
     - name: Build debug mode
-      continue-on-error: true
       shell: bash
       working-directory: ${{ github.workspace }}
       run:  "sudo chmod 777 build_linux.sh && ./build_linux.sh debug"
 
 ### package (debug mode)
     - name: Package build (debug)
-      if: success()
       shell: bash
       working-directory: ${{ github.workspace }}
       run: sudo chmod 77 package_linux.sh && sudo ./package_linux.sh debug
 
 ### upload artifact/package to github Actions (debug mode)
     - name: Upload build pacakge (debug)
-      if: success()
       uses: actions/upload-artifact@v4
       with:
         name: "build-linux-debug-${{ github.sha }}"
@@ -130,7 +124,7 @@ jobs:
     
 ### release (debug + release modes) if this is a tag push
     - name: Release
-      if: success() && startsWith(github.ref, 'refs/tags/')
+      if: startsWith(github.ref, 'refs/tags/')
       uses: softprops/action-gh-release@v1
       with:
         files: "${{ env.PACKAGE_ROOT_PATH }}/**/*"
