--- a/.github/workflows/build-win.yml
+++ b/.github/workflows/build-win.yml
@@ -86,21 +86,18 @@ jobs:
 
 ### build (release mode)
     - name: Build release mode
-      continue-on-error: true
       shell: cmd
       working-directory: ${{ github.workspace }}
       run: build_win.bat release
 
 ### package (release mode)
     - name: Package build (release)
-      if: success()
       shell: cmd
       working-directory: ${{ github.workspace }}
       run: package_win.bat release
 
 ### upload artifact/package to github Actions (release mode)
     - name: Upload build pacakge (release)
-      if: success()
       uses: actions/upload-artifact@v4
       with:
         name: "build-win-release-${{ github.sha }}"
@@ -111,21 +108,18 @@ jobs:
     
 ### build (debug mode)
     - name: Build debug mode
-      continue-on-error: true
       shell: cmd
       working-directory: ${{ github.workspace }}
       run: build_win.bat debug
 
 ### package (debug mode)
     - name: Package build (debug)
-      if: success()
       shell: cmd
       working-directory: ${{ github.workspace }}
       run: package_win.bat debug
 
 ### upload artifact/package to github Actions (debug mode)
     - name: Upload build pacakge (debug)
-      if: success()
       uses: actions/upload-artifact@v4
       with:
         name: "build-win-debug-${{ github.sha }}"
@@ -136,7 +130,7 @@ jobs:
     
 ### release (debug + release modes) if this is a tag push
     - name: Release
-      if: success() && startsWith(github.ref, 'refs/tags/')
+      if: startsWith(github.ref, 'refs/tags/')
       uses: softprops/action-gh-release@v1
       with:
         files: "${{ env.PACKAGE_ROOT_PATH }}/**/*"
