--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -17,12 +17,12 @@ permissions:
   contents: write
 
 env:
-  THIRD_PARTY_BASE_DIR: 'third-party'
 
   DEPS_CACHE_KEY: emu-deps-linux
-  DEPS_CACHE_DIR: build-linux-deps
+  DEPS_CACHE_DIR: build/linux/deps
 
-  PACKAGE_ROOT_PATH: "build-linux/package"
+  PACKAGE_BASE_DIR: "build/linux/package"
+  THIRD_PARTY_BASE_DIR: 'third-party'
   
 jobs:
   build:
@@ -95,7 +95,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: "build-linux-release-${{ github.sha }}"
-        path: "${{ env.PACKAGE_ROOT_PATH }}/release/"
+        path: "${{ env.PACKAGE_BASE_DIR }}/release/"
         if-no-files-found: 'error'
         compression-level: 9
         retention-days: 1
@@ -117,7 +117,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: "build-linux-debug-${{ github.sha }}"
-        path: "${{ env.PACKAGE_ROOT_PATH }}/debug/"
+        path: "${{ env.PACKAGE_BASE_DIR }}/debug/"
         if-no-files-found: 'error'
         compression-level: 9
         retention-days: 1
@@ -127,5 +127,5 @@ jobs:
       if: startsWith(github.ref, 'refs/tags/')
       uses: softprops/action-gh-release@v1
       with:
-        files: "${{ env.PACKAGE_ROOT_PATH }}/**/*"
+        files: "${{ env.PACKAGE_BASE_DIR }}/**/*"
     
